--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,6 +21,37 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!--HELP TOOL-->
+        <activity
+            android:name=".Others.SettingActivity"
+            android:label="@string/menu_setting"
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+        <activity
+            android:name=".Others.AboutUsActivity"
+            android:excludeFromRecents="true"
+            android:label="@string/menu_about"
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Others.FeedbackActivity"
+            android:excludeFromRecents="true"
+            android:label="@string/menu_feedback"
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Others.TutorialActivity"
+            android:excludeFromRecents="true"
+            android:label="@string/menu_tutorial"
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait" />
+
+
     </application>
 
 </manifest>
